--- a/style.css
+++ b/style.css
@@ -1,15 +1,12 @@
 .headlines {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+    width: 75%;
     background-color: #F2F3F4 ;
 
 }
 /* headline container */ 
+
 .headline{
-    
-   width: 100%;
-   margin-top: 10px;
+    margin-top: 10px;
 }
 
 /* headline text*/
@@ -42,4 +39,8 @@ table{
     overflow-y:scroll;
     height:600px;
     display:block; 
+}
+
+img{
+    margin: auto;
 }
