--- a/Styles/style.css
+++ b/Styles/style.css
@@ -4,6 +4,7 @@
     overflow-y:scroll;
     height:600px;
     display:block;
+    border: 2px solid black;
 
 }
 /* headline container */ 
@@ -46,4 +47,25 @@ table{
 
 img{
     margin: auto;
+}
+
+body {
+    background-image: url(wallpaper.jpeg);
+}
+
+.jumbotron {
+    background-image: url(banner.jpeg);
+    border: 2px solid black;
+}
+
+h3 {
+    font-style: italic;
+    color: black;
+    font-weight: bolder;
+}
+
+.table {
+    border: 2px solid black;
+    width: auto;
+    height: auto;
 }
