--- a/Styles/style.css
+++ b/Styles/style.css
@@ -56,6 +56,9 @@ body {
 .jumbotron {
     background-image: url(banner.jpeg);
     border: 2px solid black;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 
 h3 {
